horizontal scroll on mobile fix

--- a/blocks/blockquote/blockquote.css
+++ b/blocks/blockquote/blockquote.css
@@ -48,6 +48,7 @@ border: 1px solid #707070;
             color: #eb1000;
             background-color: transparent;
             text-decoration: underline;
+            text-wrap: wrap;
 
             &:hover {
                     text-decoration: underline;
